@@ -55,7 +55,12 @@ public class ChatClient extends AbstractClient {
         {
             players.add((Player) msg);
             System.out.println(players.size() + " players added");
-            clientGUI.addPlayerToGameUI(players.get(players.size() - 1));
+
+            if (clientGUI != null) {
+                clientGUI.addPlayerToGameUI(players.getLast()); // Notify ClientGUI
+            } else {
+                System.out.println("Error: clientGUI is null. Cannot update the UI.");
+            }
         }
     }
 
